--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -31,3 +31,5 @@ RUN apt-get update \
 USER ${USERNAME}
 COPY atcoder-cli-config.sh  /tmp
 RUN sh /tmp/atcoder-cli-config.sh
+
+ENV DEBIAN_FRONTEND newt
