--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,7 +18,9 @@
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"ms-python.python"
+		"ms-python.python",
+		"kevinrose.vsc-python-indent",
+		"oderwat.indent-rainbow",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
