--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.8.2
 
 ARG USERNAME=color_kurenawi
-ARG GROUPNAME=color_kurenawi
+ARG GROUPNAME=${USERNAME}
 ARG USER_UID=1000
-ARG USER_GID=1000
+ARG USER_GID=${USER_UID}
 
 ENV DEBIAN_FRONTEND noninteractive
 
