--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
 	"extensions": [
 		"ms-python.python",
 		"kevinrose.vsc-python-indent",
+		"ms-vscode.cpptools",
 		"oderwat.indent-rainbow",
 	],
 
